--- a/index.html
+++ b/index.html
@@ -73,7 +73,115 @@
         </div>
     </div>
 
-    <!-- تكرار الكود مع تعديل أسماء الأغلفة والعناوين والروابط لبقية الكتب -->
+    <!-- الكتاب 4 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول التشويه الجسدي</div>
+        <div class="buttons">
+            <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 5 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول التلقيح الصناعي</div>
+        <div class="buttons">
+            <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 6 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول العناء</div>
+        <div class="buttons">
+            <a href="books/بحث حول العناء.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول العناء.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 7 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول القصة فقهياً</div>
+        <div class="buttons">
+            <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 8 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول الكحول</div>
+        <div class="buttons">
+            <a href="books/بحث حول الكحول.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 9 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول خصائص النبي</div>
+        <div class="buttons">
+            <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 10 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول قاعدة الإلزام</div>
+        <div class="buttons">
+            <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 11 -->
+    <div class="book">
+        <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+        <div class="buttons">
+            <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض</a>
+            <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 12 -->
+    <div class="book">
+        <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+        <div class="buttons">
+            <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض</a>
+            <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 13 -->
+    <div class="book">
+        <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+        <div class="buttons">
+            <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض</a>
+            <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
+        </div>
+    </div>
+
+    <!-- الكتاب 14 -->
+    <div class="book">
+        <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+        <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+        <div class="buttons">
+            <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض</a>
+            <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
+        </div>
+    </div>
 
     <!-- الكتاب 15 -->
     <div class="book">
