--- a/index.html
+++ b/index.html
@@ -3,195 +3,225 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة عرض الكتب</title>
+    <title>مكتبة الكتب</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
             direction: rtl;
             text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 20px;
+            margin: 0;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
         }
         .book {
-            display: inline-block;
-            margin: 20px;
-            width: 200px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            transition: transform 0.3s;
+            width: 250px;
+        }
+        .book:hover {
+            transform: scale(1.05);
         }
         .book img {
             width: 100%;
             height: auto;
+            border-bottom: 1px solid #ddd;
         }
         .book-title {
             font-weight: bold;
-            margin: 10px 0;
+            margin: 15px 10px;
         }
         .buttons {
-            margin-top: 5px;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         .buttons a {
-            display: block;
-            margin: 5px 0;
             padding: 10px;
             background-color: #007BFF;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
+            transition: background-color 0.3s;
         }
         .buttons a:hover {
             background-color: #0056b3;
+        }
+        @media (max-width: 768px) {
+            .book {
+                width: 90%;
+            }
         }
     </style>
 </head>
 <body>
     <h1>مكتبة الكتب</h1>
+    <div class="container">
+        <!-- الكتاب 1 -->
+        <div class="book">
+            <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الأسرة في الإسلام</div>
+            <div class="buttons">
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
+                <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
+            </div>
+        </div>
 
-    <!-- الكتاب 1 -->
-    <div class="book">
-        <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">الأسرة في الإسلام</div>
-        <div class="buttons">
-            <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
-            <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
+        <!-- الكتاب 2 -->
+        <div class="book">
+            <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الطائفية في نظر الاسلام</div>
+            <div class="buttons">
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons">
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول العناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول العناء.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول العناء.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons">
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons">
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons">
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons">
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
+            </div>
         </div>
     </div>
-
-    <!-- الكتاب 2 -->
-    <div class="book">
-        <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">الطائفية في نظر الاسلام</div>
-        <div class="buttons">
-            <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
-            <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 3 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث أوقات الصلاة</div>
-        <div class="buttons">
-            <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض</a>
-            <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 4 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول التشويه الجسدي</div>
-        <div class="buttons">
-            <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 5 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول التلقيح الصناعي</div>
-        <div class="buttons">
-            <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 6 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول العناء</div>
-        <div class="buttons">
-            <a href="books/بحث حول العناء.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول العناء.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 7 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول القصة فقهياً</div>
-        <div class="buttons">
-            <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 8 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول الكحول</div>
-        <div class="buttons">
-            <a href="books/بحث حول الكحول.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 9 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول خصائص النبي</div>
-        <div class="buttons">
-            <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 10 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول قاعدة الإلزام</div>
-        <div class="buttons">
-            <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 11 -->
-    <div class="book">
-        <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">بحث حول قراءة القرآن الكريم</div>
-        <div class="buttons">
-            <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض</a>
-            <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 12 -->
-    <div class="book">
-        <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
-        <div class="buttons">
-            <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض</a>
-            <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 13 -->
-    <div class="book">
-        <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
-        <div class="buttons">
-            <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض</a>
-            <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 14 -->
-    <div class="book">
-        <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">منة المنان في الدفاع عن القرآن</div>
-        <div class="buttons">
-            <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض</a>
-            <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
-        </div>
-    </div>
-
-    <!-- الكتاب 15 -->
-    <div class="book">
-        <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
-        <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
-        <div class="buttons">
-            <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض</a>
-            <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
-        </div>
-    </div>
-
 </body>
 </html>
