--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             margin: 0;
         }
         .container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: 20px;
             padding: 20px;
         }
@@ -31,6 +32,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             transition: transform 0.3s;
+            width: 250px;
         }
         .book:hover {
             transform: scale(1.05);
@@ -62,13 +64,8 @@
             background-color: #0056b3;
         }
         @media (max-width: 768px) {
-            .container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-        @media (max-width: 480px) {
-            .container {
-                grid-template-columns: 1fr;
+            .book {
+                width: 90%;
             }
         }
     </style>
