--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
             gap: 10px;
         }
         .share-buttons a {
-            padding: 10px 15px;
+            padding: 10px;
             background-color: #6c757d;
             color: #fff;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 50%;
             transition: background-color 0.3s;
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 20px;
+            width: 40px;
+            height: 40px;
         }
         .share-buttons a:hover {
             background-color: #5a6268;
-        }
-        .share-buttons i {
-            margin-left: 5px;
         }
         @media (max-width: 768px) {
             .book {
@@ -106,16 +106,155 @@
                 <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
             </div>
         </div>
-        
-        <!-- أزرار المشاركة -->
-        <div class="share-buttons">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://example.com" target="_blank"><i class="fab fa-facebook-f"></i>فيسبوك</a>
-            <a href="https://twitter.com/intent/tweet?url=https://example.com" target="_blank"><i class="fab fa-x-twitter"></i>إكس</a>
-            <a href="https://wa.me/?text=اطلع على هذه الكتب: https://example.com" target="_blank"><i class="fab fa-whatsapp"></i>واتساب</a>
-            <a href="https://t.me/share/url?url=https://example.com&text=اطلع على هذه الكتب" target="_blank"><i class="fab fa-telegram-plane"></i>تيليجرام</a>
-            <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://example.com" target="_blank"><i class="fas fa-envelope"></i>بريد إلكتروني</a>
+
+        <!-- الكتاب 2 -->
+        <div class="book">
+            <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">الطائفية في نظر الاسلام</div>
+            <div class="buttons">
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
+            </div>
         </div>
 
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons">
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول العناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول العناء.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول العناء.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons">
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons">
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons">
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons">
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- أزرار المشاركة في أسفل الصفحة -->
+    <div class="share-buttons">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://wa.me/?text=اطلع على هذه الكتب: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://t.me/share/url?url=https://ayadhost.github.io/Download-books/&text=اطلع على هذه الكتب" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+        <a href="mailto:?subject=كتب مناهج التعليم العالي&body=اطلع على هذه الكتب من هنا: https://ayadhost.github.io/Download-books/" target="_blank"><i class="fas fa-envelope"></i></a>
     </div>
 </body>
 </html>
