--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             padding: 0;
         }
         h1 {
-            background-color: #007BFF;
+            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
             padding: 20px;
             margin: 0;
@@ -55,14 +55,14 @@
         }
         .buttons a {
             padding: 10px;
-            background-color: #007BFF;
+            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
         .buttons a:hover {
-            background-color: #0056b3;
+            background-color: #5a6268;
         }
         .share-buttons {
             margin: 20px 0;
