--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>كتب مناهج التعليم العالي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f5f5f5;
@@ -15,7 +25,7 @@
             padding: 0;
         }
         h1 {
-            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
+            background-color: #6c757d;
             color: #fff;
             padding: 20px;
             margin: 0;
@@ -34,6 +44,8 @@
             overflow: hidden;
             transition: transform 0.3s;
             width: 250px;
+            opacity: 0;
+            animation: fadeIn 1.5s forwards; /* إضافة تأثير fade-in */
         }
         .book:hover {
             transform: scale(1.05);
@@ -55,7 +67,7 @@
         }
         .buttons a {
             padding: 10px;
-            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
+            background-color: #6c757d;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
