--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
     <title>كتب مناهج التعليم العالي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f5f5f5;
@@ -25,7 +15,7 @@
             padding: 0;
         }
         h1 {
-            background-color: #6c757d;
+            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
             padding: 20px;
             margin: 0;
@@ -44,8 +34,6 @@
             overflow: hidden;
             transition: transform 0.3s;
             width: 250px;
-            opacity: 0;
-            animation: fadeIn 1.5s forwards; /* إضافة تأثير fade-in */
         }
         .book:hover {
             transform: scale(1.05);
@@ -67,7 +55,7 @@
         }
         .buttons a {
             padding: 10px;
-            background-color: #6c757d;
+            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
