--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>كتب مناهج التعليم العالي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f5f5f5;
@@ -34,6 +44,53 @@
             overflow: hidden;
             transition: transform 0.3s;
             width: 250px;
+            opacity: 0;
+            animation: fadeIn 1.5s forwards; /* إضافة تأثير fade-in */
+        }
+        .book:nth-child(1) {
+            animation-delay: 0.2s;
+        }
+        .book:nth-child(2) {
+            animation-delay: 0.4s;
+        }
+        .book:nth-child(3) {
+            animation-delay: 0.6s;
+        }
+        .book:nth-child(4) {
+            animation-delay: 0.8s;
+        }
+        .book:nth-child(5) {
+            animation-delay: 1s;
+        }
+        .book:nth-child(6) {
+            animation-delay: 1.2s;
+        }
+        .book:nth-child(7) {
+            animation-delay: 1.4s;
+        }
+        .book:nth-child(8) {
+            animation-delay: 1.6s;
+        }
+        .book:nth-child(9) {
+            animation-delay: 1.8s;
+        }
+        .book:nth-child(10) {
+            animation-delay: 2s;
+        }
+        .book:nth-child(11) {
+            animation-delay: 2.2s;
+        }
+        .book:nth-child(12) {
+            animation-delay: 2.4s;
+        }
+        .book:nth-child(13) {
+            animation-delay: 2.6s;
+        }
+        .book:nth-child(14) {
+            animation-delay: 2.8s;
+        }
+        .book:nth-child(15) {
+            animation-delay: 3s;
         }
         .book:hover {
             transform: scale(1.05);
