--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             transition: transform 0.3s;
             width: 250px;
             opacity: 0;
-            animation: fadeIn 1.5s forwards; /* إضافة تأثير fade-in */
+            animation: fadeIn 1.5s forwards; /* تأثير fade-in */
         }
         .book:nth-child(1) {
             animation-delay: 0.2s;
@@ -93,7 +93,7 @@
             animation-delay: 3s;
         }
         .book:hover {
-            transform: scale(1.05);
+            transform: scale(1.05); /* تأثير الحركة عند المرور بالماوس */
         }
         .book img {
             width: 100%;
