--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
-            transition: transform 0.3s;
+            transition: transform 0.3s; /* تأثير التكبير عند المرور بالماوس */
             width: 250px;
             opacity: 0;
             transform: translateY(20px);
@@ -51,7 +51,7 @@
             animation: fadeIn 1.5s forwards; /* تطبيق تأثير fade-in */
         }
         .book:hover {
-            transform: scale(1.05); /* تأثير الحركة عند المرور بالماوس */
+            transform: scale(1.05); /* إعادة تأثير التكبير عند مرور الماوس */
         }
         .book img {
             width: 100%;
