--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         .buttons a:hover {
             background-color: #5a6268;
         }
+        .buttons a i {
+            font-size: 1.2em;
+        }
         .share-buttons {
             margin: 20px 0;
             display: flex;
@@ -121,7 +124,7 @@
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons">
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
             </div>
         </div>
@@ -131,7 +134,7 @@
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
             </div>
         </div>
@@ -141,7 +144,7 @@
             <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث أوقات الصلاة</div>
             <div class="buttons">
-                <a href="books/بحث أوقات الصلاة.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
             </div>
         </div>
@@ -151,7 +154,7 @@
             <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول التشويه الجسدي</div>
             <div class="buttons">
-                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
             </div>
         </div>
@@ -161,7 +164,7 @@
             <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول التلقيح الصناعي</div>
             <div class="buttons">
-                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
             </div>
         </div>
@@ -171,7 +174,7 @@
             <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول العناء</div>
             <div class="buttons">
-                <a href="books/بحث حول العناء.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول العناء.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول العناء.pdf" download>تحميل</a>
             </div>
         </div>
@@ -181,7 +184,7 @@
             <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول القصة فقهياً</div>
             <div class="buttons">
-                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
             </div>
         </div>
@@ -191,7 +194,7 @@
             <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول الكحول</div>
             <div class="buttons">
-                <a href="books/بحث حول الكحول.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول الكحول.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
             </div>
         </div>
@@ -201,7 +204,7 @@
             <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول خصائص النبي</div>
             <div class="buttons">
-                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
             </div>
         </div>
@@ -211,7 +214,7 @@
             <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول قاعدة الإلزام</div>
             <div class="buttons">
-                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
             </div>
         </div>
@@ -221,7 +224,7 @@
             <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
             <div class="book-title">بحث حول قراءة القرآن الكريم</div>
             <div class="buttons">
-                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
             </div>
         </div>
@@ -231,7 +234,7 @@
             <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
             <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
             <div class="buttons">
-                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
             </div>
         </div>
@@ -241,7 +244,7 @@
             <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
             <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
             <div class="buttons">
-                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
             </div>
         </div>
@@ -251,7 +254,7 @@
             <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
             <div class="book-title">منة المنان في الدفاع عن القرآن</div>
             <div class="buttons">
-                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
             </div>
         </div>
@@ -261,7 +264,7 @@
             <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
             <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
             <div class="buttons">
-                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank"><i class="fas fa-file-pdf"></i> عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
                 <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
             </div>
         </div>
