--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
         }
         .buttons-container {
             display: flex;
-            align-items: center;
-            justify-content: center;
+            align-items: stretch;
+            justify-content: space-between;
             gap: 10px;
         }
         .pdf-icon {
             background-color: #d9534f; /* لون مميز للأيقونة */
             color: #fff;
-            padding: 10px;
+            padding: 20px;
             border-radius: 5px;
             display: flex;
             align-items: center;
@@ -82,6 +82,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            flex: 1;
         }
         .buttons a {
             flex: 1;
@@ -137,7 +138,7 @@
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons-container">
                 <div class="pdf-icon">
-                    <i class="fas fa-file-pdf"></i>
+                    <i class="fas fa-file-pdf fa-3x"></i>
                 </div>
                 <div class="buttons">
                     <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
@@ -152,7 +153,7 @@
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons-container">
                 <div class="pdf-icon">
-                    <i class="fas fa-file-pdf"></i>
+                    <i class="fas fa-file-pdf fa-3x"></i>
                 </div>
                 <div class="buttons">
                     <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
