--- a/index.html
+++ b/index.html
@@ -71,12 +71,16 @@
         .pdf-icon {
             background-color: #d9534f; /* لون مميز للأيقونة */
             color: #fff;
-            padding: 20px;
+            padding: 10px;
             border-radius: 5px;
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100%; /* مساواة الارتفاع مع الزرين */
+            flex-shrink: 0;
+        }
+        .pdf-icon i {
+            font-size: 2.5em; /* حجم الأيقونة */
         }
         .buttons {
             display: flex;
@@ -138,7 +142,7 @@
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons-container">
                 <div class="pdf-icon">
-                    <i class="fas fa-file-pdf fa-3x"></i>
+                    <i class="fas fa-file-pdf"></i>
                 </div>
                 <div class="buttons">
                     <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
@@ -153,7 +157,7 @@
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons-container">
                 <div class="pdf-icon">
-                    <i class="fas fa-file-pdf fa-3x"></i>
+                    <i class="fas fa-file-pdf"></i>
                 </div>
                 <div class="buttons">
                     <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
