--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </style>
 </head>
 <body>
-    <h1>(PDF) كتب مناهج التعليم العالي</h1>
+    <h1>كتب مناهج التعليم العالي (PDF)</h1>
     <div class="container">
         <!-- الكتاب 1 -->
         <div class="book">
