--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            gap: 15px; /* لإضافة مسافة بين الأيقونة والنص */
         }
         .buttons a i {
-            margin-right: 15px; /* زيادة المسافة بين الأيقونة والنص */
+            font-size: 1.2em; /* تكبير حجم الأيقونة إذا لزم الأمر */
         }
         .buttons a:hover {
             background-color: #5a6268;
@@ -123,8 +124,8 @@
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons">
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank"><i class="fas fa-eye"></i> <span>عرض</span></a>
-                <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-download"></i> <span>تحميل</span></a>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-download"></i> تحميل</a>
             </div>
         </div>
 
@@ -133,8 +134,8 @@
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> <span>عرض</span></a>
-                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-download"></i> <span>تحميل</span></a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-download"></i> تحميل</a>
             </div>
         </div>
 
