--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         }
         .phone-number {
             direction: ltr; /* عرض رقم الهاتف من اليسار إلى اليمين */
-            text-align: right; /* جعل الأيقونة تظهر أمام النص */
+            display: flex;
+            align-items: center;
         }
         @media (max-width: 768px) {
             .contact-info {
